[package]
name = "noise_fn"
description = "Some simple noise functions and traits to allow easy integration with your own"
keywords = ["noise", "random", "simplex", "perlin", "seeded"]
categories = ["mathematics", "game-development", "graphics", "rust-patterns", "no-std"]
documentation = "https://docs.rs/noise_fn"
homepage = "https://github.com/LukeMiles49/noise-fn-rs"
version = "0.2.0"
authors = ["Luke Miles <luke.49@live.co.uk>"]
license = "MIT"
repository = "https://github.com/LukeMiles49/noise-fn-rs"
readme = "README.md"
edition = "2021"

[dependencies]
rand = "^0.8.5"
sized_matrix = "^0.3.0"
higher_order_functions = "^0.2.0"
lazy_static = "^1.4.0"
num-traits = "^0.2.0"
wyhash = "^0.5.0"

[dev-dependencies]
version-sync = "^0.9.0"

[features]
